[project]
name = "comfyui-deepextract"
description = "DeepExtract is a powerful and efficient tool designed to separate vocals and sounds from audio files, providing an enhanced experience for musicians, producers, and audio engineers. With DeepExtract, you can quickly and effectively isolate vocals or instruments from mixed audio tracks, facilitating tasks like remixing, karaoke preparation, or audio analysis."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["onnx", "onnx2pytorch", "librosa==0.9.2", "soundfile==0.12.1", "tqdm"]

[project.urls]
Repository = "https://github.com/abdozmantar/ComfyUI-DeepExtract"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-DeepExtract"
Icon = ""
